# OpenCAD

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCTION.md  README.md  SECURITY.md  TOPOLOGY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Application/: README.md
Application/Problem1_ForearmLength/: README.md  render_video1_final.py
Application/Problem2_WristOffset/: README.md
Application/Problem3_JointFriction/: README.md
backend/: api.py
backend/opencad/: __init__.py  __main__.py  api_app.py  cli.py  design_artifact.py  part.py  runtime.py  sketch.py  version.py
backend/opencad_agent/: __init__.py  api.py  generated_code.py  llm.py  prompting.py  service.py  tools.py
backend/opencad_kernel/: api.py
backend/opencad_solver/: __init__.py  api.py  backend.py  models.py  solvespace_backend.py
backend/opencad_tree/: __init__.py  api.py  models.py
backend/tests/: test_api_mounts.py
docs/: RECONSTRUCTION_AND_UPGRADE_PLAN.md
examples/: README.md  firmware_programmer_fixture.py  full_device_cable_grommet.py  hardware_mounting_bracket.py  hardware_pcb_carrier.py  simcorrect_forearm_design.py  software_hmi_panel.py
examples/agents/: README.md  generate_mounting_bracket_code.py
opencad/: kernel_adapter.py  part.py  runtime.py
opencad/tests/: test_examples.py  test_fluent_api.py
opencad_agent/: __init__.py  api.py  llm.py  models.py  planner.py  prompting.py  service.py  tools.py
opencad_agent/tests/: test_agent.py  test_toolruntime_live_sketch.py
opencad_kernel/: ERRORS.md  __init__.py  api.py
opencad_kernel/core/: backend.py  checks.py  errors.py  models.py  occt_backend.py  snapshot.py  store.py
opencad_kernel/operations/: handlers.py  registry.py
opencad_kernel/tests/: test_new_ops.py  test_op_log.py  test_operations.py
opencad_solver/: __init__.py  api.py  solver.py  solvespace_backend.py
opencad_tree/: __init__.py  api.py  expression.py  graph.py  service.py
opencad_tree/tests/: test_expression.py  test_tree.py
opencad_viewport/: .env.example  index.html  package.json  pnpm-lock.yaml
scripts/: run_dev.sh  smoke_backend.sh
(+29 files in other folders)
