[project]
name = "opencad"
version = "0.2.0"
description = "Modular CAD platform — kernel, solver, feature tree, viewport, and AI agent"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "fastapi>=0.100",
  "numpy>=2",
  "pytest>=8",
]

[project.scripts]
opencad = "opencad.cli:main"

[project.optional-dependencies]
occt = [
  "cadquery>=2.4",
  "OCP>=7.7",
]
full = [
  "scipy>=1.12",
  "networkx>=3",
  "openai>=1.40",
  "cadquery>=2.4",
  "OCP>=7.7",
  "httpx>=0.27",
  "sse-starlette>=2.0",
  "uvicorn>=0.30",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
  "opencad/tests",
  "opencad_kernel/tests",
  "opencad_solver/tests",
  "opencad_tree/tests",
  "opencad_agent/tests",
]
addopts = "-q"
