[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencad"
version = "0.2.0"
description = "Modular CAD platform — kernel, solver, feature tree, viewport, and AI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "fastapi>=0.100",
  "httpx>=0.27",
  "numpy>=2",
]

[project.scripts]
opencad = "opencad.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
]
occt = [
  "cadquery>=2.4",
  "OCP>=7.7",
]
full = [
  "scipy>=1.12",
  "networkx>=3",
  "openai>=1.40",
  "cadquery>=2.4",
  "OCP>=7.7",
  "sse-starlette>=2.0",
  "uvicorn>=0.30",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
  "opencad/tests",
  "opencad_kernel/tests",
  "opencad_solver/tests",
  "opencad_tree/tests",
  "opencad_agent/tests",
]
addopts = "-q"

[tool.setuptools.packages.find]
namespaces = false
include = [
  "opencad*",
  "opencad_kernel*",
  "opencad_solver*",
  "opencad_tree*",
  "opencad_agent*",
]
exclude = [
  "opencad.tests",
  "opencad.tests.*",
  "opencad_kernel.tests",
  "opencad_kernel.tests.*",
  "opencad_solver.tests",
  "opencad_solver.tests.*",
  "opencad_tree.tests",
  "opencad_tree.tests.*",
  "opencad_agent.tests",
  "opencad_agent.tests.*",
]
